Mon Oct 11 21:56:22 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in include/Makefile.am include/tds_configs.h.in:
	* include/tds.h.in (removed) include/tds.h (added):
	- put all configure related include info in tds_configs.h.in

Fri Oct 11 15:26:38 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/vasprintf.c:
	- Fix another /dev/null...thanks Jim.

Fri Oct 11 11:20:10 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/odbc/odbc_util.h src/odbc/prepare_query.h
	  src/tds/des.c src/tds/md4.c:
	- Fix the last few config.h stragglers.

Fri Oct 11 11:03:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/freebcp.c src/apps/tsql.c:
	- Include config.h properly.

Fri Oct 11 10:48:13 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/asprintf.c:
	- #if HAVE_CONFIG_H instead of #ifdef HAVE_CONFIG_H for
	  consistency with other modules.

Fri Oct 11 10:45:12 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/replacements/vasprintf.c:
	- Add autoconf header test for paths.h.  Use _PATH_DEVNULL
	  instead of hardcoding "/dev/null".

Thu Oct 10 15:04:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/main.c src/pool/member.c:
	- Make some local functions static, and provide prototypes.

Thu Oct 10 13:09:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/Makefile.am doc/userguide.sgml:
	- Build and install the pool server by default.
	- Update tdspool documentation.  Remove build/install
	  instructions since that is now done by default.
	  Emphasize TDS 4.2 configuration restrictions.

Thu Oct 10 11:37:53 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/odbc/convert_tds2sql.c:
	- Remove unused variable.

Thu Oct 10 11:35:28 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/config.c:
	- Bug fix, printf was used where fprintf was intended.

Thu Oct 10 10:47:19 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/Makefile.am:
	- Distribute and install pool.conf.
