@@ -28,13 +28,9 @@
 #include <assert.h>
 #include <ctype.h>
 #include <string.h>
-#ifdef __DGUX__
-#include <paths.h>
-#endif
 #ifdef WIN32
 #include <windows.h>
 #include <stdio.h>
-#define PATH_MAX 255
 #endif
 #ifndef WIN32
 #include <netdb.h>
@@ -49,7 +45,7 @@
 #include <dmalloc.h>
 #endif
 
-static char  software_version[]   = "$Id: config.c,v 1.40 2002-10-10 15:36:22 castellano Exp $";
+static char  software_version[]   = "$Id: config.c,v 1.41 2002-10-11 20:22:16 castellano Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
